[package]
name = "yocalhost"
version = "0.3.0"
edition = "2021"
description = "an http development server that simulates latency and bandwidth limitations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/michaelkirk/yocalhost"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["stats", "env_logger"]
stats = []

[dependencies]
async-speed-limit = { version = "0.4.1", features = ["tokio"] }
byte-unit = "4.0.19"
clap = { version = "4.4.2", features = ["derive"] }
env_logger = { version = "0.10.0", optional = true }
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full", "stream"] }
hyper-staticfile = "0.9.5"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
